--- a/css/style.scss
+++ b/css/style.scss
@@ -1,1 +1,103 @@
 $font-default:"lato";
+$cyan-color:#00B3F7;
+$border-default: solid 1px $cyan-color;
+$white-color:#FFFFFF;
+$bg-gray: #F6F6F5;
+
+body{
+	font-family: $font-default;
+}
+.bg-gray{
+	background-color: $bg-gray;
+}
+.color{
+	color: $cyan-color;
+}
+.img-cel{
+	width: 100%;
+	max-width: 400px;
+}
+.media-body{
+	font-size: 14px;
+}
+.bg-dark{
+	background-color: rgba(0, 0, 0, .5);
+	background-size: cover;
+	background-repeat: no-repeat;
+	height: 435px;
+}
+.performance{
+	margin: 7%;
+}
+footer{
+	padding: 5%;
+}
+.picfondo{
+	background-image: url(../images/1920x665-1.jpg);
+	background-size: cover;
+	background-repeat: no-repeat;
+	height: 435px;
+}
+.titlebig{
+	color: $white-color;
+	line-height: 1.5;
+}
+.sistem{
+	margin: 2% 0;
+}
+.btn{
+	border-radius: 20px;
+	padding: 0 20px;
+	display: inline-block;
+	margin-left: 2%;
+	&:hover{
+		background-color: transparent;
+		border: $border-default;
+	}
+}
+.btn-primary{
+	background-color: $cyan-color;
+	font-weight: bolder;
+	color: $white-color;
+	a{
+		color: $white-color;
+		&:hover{
+			color:$cyan-color;
+		}
+	}
+	&:hover{
+		background-color: transparent;
+		border: $border-default;
+		color:$cyan-color;
+	}
+}
+.btn-default{
+	background-color: transparent;
+	color: $cyan-color;
+	border: $border-default;
+
+	&:hover{
+		background-color: $cyan-color;
+		color:$white-color;
+		border: $border-default;
+	}
+}
+.btn-floating{
+	background-color: transparent;
+	border: $border-default;
+	.fa{
+		color: $cyan-color;
+		&:hover{
+			color:$white-color;
+		}
+	}
+	&:hover{
+		background-color: $cyan-color;
+		color:$white-color;
+		border: $border-default;
+	}
+}
+
+
+
+
